--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
           android:versionCode="1" 
           android:versionName="1.0">
   <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="14"/>
-  <application android:label=""
+  <application android:label="Trace"
                android:icon="@drawable/icon"
                android:debuggable="true">
     <activity android:name="" android:configChanges="orientation">
